# CarScreen

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/aicc/carscreen/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mqttRouter.properties
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp.bak  native-render.cpp
app/src/main/cpp/model/: model.h
app/src/main/cpp/model3d/: Car.cpp  Car.h  GLSampleBase.h
app/src/main/cpp/render/: MyGLRenderContext.cpp  MyGLRenderContext.h
app/src/main/java/com/aicc/carscreen/: HintDialogFragment.java  MainActivity.java  Utils.java
app/src/main/java/com/aicc/carscreen/exception/: CrashHandler.java
app/src/main/java/com/aicc/carscreen/fragment/: BottomFragment.java  LaneFragment.java  LaneFragment3d.java  TopFragment.java
app/src/main/java/com/aicc/carscreen/map/: AICCMapView.java
app/src/main/java/com/aicc/carscreen/mqtt/: AICCMqtt.java  IMqttNotifyListener.java
app/src/main/java/com/aicc/carscreen/view/lane/: LaneDrawModel.java  LaneView.java  ObstacleDrawModel.java
app/src/main/java/com/aicc/carscreen/view/lane/opengl/: MyGLRender.java  MyGLSurfaceView.java  MyNativeRender.java
app/src/main/proto/: aicc_adas.proto
app/src/main/res/drawable/: btn_drawable.xml  btn_selector.xml  switch_gray_thumb.xml  switch_gray_track.xml  switch_green_thumb.xml  switch_green_track.xml  switch_thumb.xml  switch_track.xml
app/src/main/res/layout/: activity_main.xml  fragment_bottom.xml  fragment_lane.xml  fragment_lane_3d.xml  fragment_top.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/aicc/carscreen/: ExampleUnitTest.java
keystore/: release.jks  高德生成release使用的keystore.txt
